// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-html > should convert v-html to innerHTML 1`] = `
"import { setHtml as _setHtml, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  let _code, __code
  _renderEffect(() => {
    __code = _ctx.code
    if(_code !== __code) {
      _setHtml(n0, __code)
      _code = __code
    }
  })
  return n0
}"
`;

exports[`v-html > should raise error and ignore children when v-html is present 1`] = `
"import { setHtml as _setHtml, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  let _test, __test
  _renderEffect(() => {
    __test = _ctx.test
    if(_test !== __test) {
      _setHtml(n0, __test)
      _test = __test
    }
  })
  return n0
}"
`;

exports[`v-html > should raise error if has no expression 1`] = `
"import { setHtml as _setHtml, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _setHtml(n0, "")
  return n0
}"
`;
